// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente  1`] = `
<div
  className="productCard undefined"
>
  <h1>
     prueba exitosa
  </h1>
</div>
`;

exports[`ProductTitle debe de mostrar el componente  2`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
